Adicionando Footer as páginas e finalizando Parte 2 do curso

--- a/styles/products.css
+++ b/styles/products.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2&family=Josefin+Sans:wght@300&family=Mulish&family=Pacifico&display=swap');
 
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css');
+
+
 *{
     margin: 0;
     padding: 0;
@@ -101,4 +104,35 @@ nav a:hover {
     color: #1c252f;
     margin-top: 10px;
     font-family: "Baloo Da 2", serif;
+}
+
+footer{
+    background: #333232;
+    width: 100%;;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 10px 0;
+    text-align: center;
+}
+
+.footer-wrapper h2{
+    font-family: "Pacifico", serif;
+    font-weight: 300;
+}
+
+.footer-wrapper p{
+    font-family: "Josefin Sans", serif;
+    margin-top: 10px;
+}
+
+.footer-icons li{
+    display: inline-block;
+    box-sizing: border-box;
+    width: 30px;
+    height: 30px;
+    margin-top: 10px;
+    margin-left: 5px;
+    color: rgb(205, 200, 200);
+    text-shadow: 0.1rem 0.1rem 1px black;
 }
