--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2&family=Josefin+Sans:wght@300&family=Mulish&family=Pacifico&display=swap');
 
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css');
+
 *{
     margin: 0;
     padding: 0;
     list-style: none;
     text-decoration: none;
+    color: #f0f0f0;
 }
 
 body {
@@ -13,9 +16,11 @@ body {
 
 #banner {
 	width: 100%;
+	position: relative;
 }
 
 header {
+	position: relative;
     background: #333232;
     padding: 10px 0;
 }
@@ -72,17 +77,17 @@ nav a:hover {
 	color: #f0f0f0;;
 }
 
-p {
+.about p {
 	margin: 5px;
 	text-align: center;
 	color: #f0f0f0;;
 }
 
-#mission {
+.about #mission {
 	font-size: 20px
 }
 
-em strong {
+.about em strong {
 	color: #FF0000;
 }
 
@@ -108,4 +113,35 @@ em strong {
 
 .img-benefits {
 	width: 50%;
+}
+
+footer{
+    background: #333232;
+    width: 100%;;
+    position: static;
+    bottom: 0;
+    left: 0;
+    padding: 10px 0;
+    text-align: center;
+}
+
+.footer-wrapper h2{
+    font-family: "Pacifico", serif;
+    font-weight: 300;
+}
+
+.footer-wrapper p{
+    font-family: "Josefin Sans", serif;
+    margin-top: 10px;
+}
+
+.footer-icons li{
+    display: inline-block;
+    box-sizing: border-box;
+    width: 30px;
+    height: 30px;
+    margin-top: 10px;
+    margin-left: 5px;
+    color: rgb(205, 200, 200);
+    text-shadow: 0.1rem 0.1rem 1px black;
 }
