--- a/styles/products.css
+++ b/styles/products.css
@@ -20,6 +20,16 @@ header {
     padding: 10px 0;
 }
 
+main{
+    background-image: url(../images/banner.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+}
+
 .logo {
     width: 20%;
 }
@@ -51,6 +61,7 @@ nav a{
 
 nav a:hover {
     opacity: 0.8;
+    transition: 0.5s;
 }
 
 .products {
@@ -74,8 +85,9 @@ nav a:hover {
 }
 
 .products li:hover{
-    opacity: 0.8;
+    background-color: #e2d1a2;
     cursor: pointer;
+    transition: 0.5s;
 }
 
 .products h2 {
@@ -108,8 +120,8 @@ nav a:hover {
 
 footer{
     background: #333232;
-    width: 100%;;
-    position: absolute;
+    width: 100%;
+    position: static;
     bottom: 0;
     left: 0;
     padding: 10px 0;
