Aula 4: Melhorando o CSS e ajustando Home

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -55,12 +55,13 @@ nav a:hover {
 }
 
 main{
-    background-image: url(../images/banner.jpg);
+    background-image: url(../images/banner-fade.png);
     background-size: cover;
     background-position: center;
     display: flex;
     justify-content: center;
 }
+
 
 form{
     padding: 1.5% 0 2.5% 0;
@@ -90,6 +91,10 @@ form label, form p{
     box-shadow: 0 0 10px #000;
 }
 
+form textarea{
+    resize: none;
+}
+
 form input[type=radio]{
     margin: 0 10px 0 0;
 }
@@ -114,6 +119,10 @@ form input[type=radio]{
     font-size: 18px;
     font-family: "Mulish", serif;
     color: #333232;
+}
+
+.div-hours table td{
+    padding-left: 10px;
 }
 
 .select-pattern{
@@ -179,6 +188,7 @@ footer{
 .footer-wrapper h2{
     font-family: "Pacifico", serif;
     font-weight: 300;
+    text-shadow: 0 0 5px #000;
 }
 
 .footer-wrapper p{
