--- a/styles/contact.css
+++ b/styles/contact.css
@@ -206,3 +206,89 @@ footer{
     color: rgb(205, 200, 200);
     text-shadow: 0.1rem 0.1rem 1px black;
 }
+
+@media screen and (max-width: 940px) {
+    .nav-wrapper {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav{
+        position: static;
+        text-align: center;
+    }
+
+    main{
+        background-image: url(../images/banner-fade.png);
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        justify-content: center;
+    }
+
+    form{
+        width: 100%;
+        display: block;
+        align-items: center;
+        text-align: center;
+    }
+
+    form label, form .radio-pattern p{
+        display: block;
+        text-align: left;
+        margin: 10px 2em;
+    }
+    
+
+    form .input-text-pattern{
+        width: 80%;
+    }
+
+
+    form .radio-pattern, form .div-hours, body > main > form > label{
+        display: block;
+        text-align: center;
+        margin: 10px 2em;
+    }
+
+    form .div-hours{
+        margin-top: 3em;
+    }
+
+    form .div-wrapper{
+        display: flex;
+        text-align: left;
+        margin: 3em 2em;
+    }
+
+    form .div-wrapper p{
+        padding: 0 1em;
+    }
+
+    form .div-hours table{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+    }
+
+    form .div-hours table thead{
+        text-align: justify;
+    }
+
+    form .div-hours table th{
+        padding: 0 10px;
+    }
+
+    select .select-pattern{
+        width: auto;
+    }
+
+    #submit{
+        margin-bottom: 3em;
+    }
+
+}
