--- a/styles/products.css
+++ b/styles/products.css
@@ -149,3 +149,53 @@ footer{
     color: rgb(205, 200, 200);
     text-shadow: 0.1rem 0.1rem 1px black;
 }
+
+@media screen and (max-width: 940px) {
+    .nav-wrapper, .products {
+        width: auto;
+    }
+
+    main {
+        width: 100%;
+        height: auto;
+        background-size: cover;
+    }
+    
+    h1{
+        text-align: center;
+    }
+
+    nav{
+        position: static;
+        text-align: center;
+    };
+
+    main , .products {
+        width: 100%;
+    }
+
+    .products li{
+        display: block;
+        align-items: center;
+        width: 100%;
+        margin: 0 0 5em 0;
+    }
+
+    .products img{
+        width: 50%;
+        margin: 0 auto;
+    }
+
+    .products h2{
+        text-align: center;
+    }
+
+    .products p{
+        text-align: center;
+    }
+
+    .products .product-price{
+        text-align: center;
+    }
+
+}
