--- a/styles/home.css
+++ b/styles/home.css
@@ -140,6 +140,10 @@ section p {
     justify-content: left;
 }
 
+.benefits-content > .ul-benefits{
+    margin-top: 30px;
+}
+
 .ul-benefits{
     font-family: "Mulish", serif;
     font-size: 1.5em;
@@ -175,6 +179,7 @@ section p {
     height: 315px;
     transition: 400ms;
     box-shadow: 10px 10px 15px #000000;
+    margin-top: 30px;
 }
 
 .map{
